--- a/config/database.yml
+++ b/config/database.yml
@@ -79,20 +79,22 @@ test:
 # for a full overview on how database connection configuration can be specified.
 #
 production:
-  primary: &primary_production
-    <<: *default
-    database: dm_client_demo_production
-    username: dm_client_demo
-    password: <%= ENV["DM_CLIENT_DEMO_DATABASE_PASSWORD"] %>
-  cache:
-    <<: *primary_production
-    database: dm_client_demo_production_cache
-    migrations_paths: db/cache_migrate
-  queue:
-    <<: *primary_production
-    database: dm_client_demo_production_queue
-    migrations_paths: db/queue_migrate
-  cable:
-    <<: *primary_production
-    database: dm_client_demo_production_cable
-    migrations_paths: db/cable_migrate
+#  primary: &primary_production
+#    <<: *default
+#    database: dm_client_demo_production
+#    username: dm_client_demo
+#    password: <%= ENV["DM_CLIENT_DEMO_DATABASE_PASSWORD"] %>
+#  cache:
+#    <<: *primary_production
+#    database: dm_client_demo_production_cache
+#    migrations_paths: db/cache_migrate
+#  queue:
+#    <<: *primary_production
+#    database: dm_client_demo_production_queue
+#    migrations_paths: db/queue_migrate
+#  cable:
+#    <<: *primary_production
+#    database: dm_client_demo_production_cable
+#    migrations_paths: db/cable_migrate
+
+  url: <%= ENV["DATABASE_URL"] %>
